<resources>
    <string name="app_name">قیچی</string>
    <string name="title_activity_maps">Sorina Map</string>
    <string name="action_refresh">Refresh</string>
    <string name="lable_activity_bookmarks">علاقه‌مندی‌ها</string>
    <string name="your_current_location">موقعیت فعلی شما</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="info_name">نام</string>
    <string name="info_family">نام خانوادگی</string>
    <string name="send_activation_code">ارسال کد فعالسازی</string>
    <string name="verification_code_continue">ادامه</string>
    <string name="verification_code_hint">کد فعالسازی</string>


    <string name="intro_more_customers">جذب مشتری بیشتر</string>
    <string name="intro_online_anytime">رزرو آنلاین در تایم دلخواه</string>
    <string name="intro_easy_reserve">رزرو آسان</string>
    <string name="intro_compare">مقایسه و انتخاب آرایشگاه</string>


    <string name="m_icon_call">&#xE0B0;</string>
    <string name="m_icon_next_step">&#xE5C8;</string>
    <string name="m_icon_done">&#xE876;</string>
    <string name="m_icon_sms">&#xE0D8;</string>
    <string name="m_icon_share">&#xE80D;</string>
    <string name="m_icon_left_arrow">&#xE314;</string>
    <string name="m_icon_date">&#xE916;</string>
    <string name="m_icon_time">&#xE192;</string>
    <string name="m_icon_credit_down">&#xE8E3;</string>
    <string name="m_icon_credit_up">&#xE8E5;</string>
    <string name="m_icon_marker">&#xE0C8;</string>


    <string name="app_avatar_image_behavior">com.sorinaidea.ghaichi.ui.behavior.AvatarImageBehavior</string>




    <string name="didnt_get_the_code">کد را دریافت نکردید؟</string>
    <string name="send_activation_code_again">ارسال مجدد</string>
    <string name="exit_the_app">خروج از حساب کاربری</string>
    <string name="error_invalid_phone"> شماره موبایل به درستی وارد نشده است. نمونه شماره معتبر: 0919***1234</string>
    <string name="error_empty_phone">شماره موبایل را وارد نمایید.</string>
    <string name="choose_location">انتخاب مکان</string>
    <string name="credid_msg">موجودی(ریال)</string>
    <string name="share">اشتراک گذاری</string>
    <string name="tell_friends_btn">معرفی به دوستان</string>
    <string name="tell_friends">معرفی قیچی به دوستان</string>
    <string name="tell_friends_msg">با کلیک روی دکمه زیر لینک اپلیکیشن قیچی را با دوستان خود به اشتراک بگزارید و گروهی به آرایشگاه بروید.</string>


    <string name="aboutus">
        متن درباره ما نمونه، این متن ساختگی است،متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است، متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است،
        متن درباره ما نمونه، این متن ساختگی است.
    </string>

    <string name="_lbl_add_credit">افزایش اعتبار</string>
    <string name="_lbl_choose">انتخاب</string>
    <string name="_lbl_comment_title">نظرسنجی</string>
    <string name="_lbl_add_service">افزودن خدمت</string>
    <string name="_lbl_price">مبلغ (ریال) </string>
    <string name="_lbl_select_gender">انتخاب جنسیت</string>
    <string name="_lbl_select_pricing">انتخاب تعداد بازدید</string>
    <string name="_lbl_cancel">انصراف</string>
    <string name="_lbl_search_barbershop">جستجوی آرایشگاه</string>
    <string name="_lbl_pay">پرداخت</string>
    <string name="_lbl_add_sample">افزودن نمونه کار</string>
    <string name="_lbl_comment">نظر</string>
    <string name="_lbl_choose_category">انتخاب دسته‌بندی</string>
    <string name="_lbl_service">نام خدمت</string>
    <string name="_lbl_sample_work">عنوان نمونه کار</string>
    <string name="_lbl_duration">مدت زمان (دقیقه)</string>
    <string name="_lbl_all">همه</string>
    <string name="_lbl_confirm">تایید</string>
    <string name="_lbl_from">از</string>
    <string name="_lbl_until">الی</string>
    <string name="_lbl_time_hint">00:00</string>
    <string name="_lbl_ok">تایید</string>
    <string name="_lbl_add">افزودن</string>
    <string name="_lbl_manage_sample_work">مدیریت نمونه کارها</string>
    <string name="_lbl_manage_service">مدیریت خدمات</string>
    <string name="_lbl_service_category">دسته‌بندی خدمات</string>
    <string name="_lbl_request_advertise">درخواست تبلیغات</string>
    <string name="_lbl_personal_info">اطلاعات شخصی</string>
    <string name="_lbl_morning">صبح</string>
    <string name="_lbl_evening">عصر</string>
    <string name="label_home">اطلاعات شخصی</string>


    <string name="err__empty__content">اطلاعات به درستی دریافت نشدند!</string>
    <string name="err__empty__cash">لطفا مبلغ را وارد نمایید</string>
    <string name="err__invalid__cash">مبلغ وارد شده معتبر نیست</string>
    <string name="err__invalid__comment">نظر نباید بیشتر از 400 کاراکتر باشد.</string>
    <string name="err__empty__phone">لطفا شماره تلفن را وارد نمایید</string>
    <string name="err__invalid__phone">شماره تلفن وارد شده معتبر نمی‌باشد</string>
    <string name="err__empty__verfcode">کد فعالسازی خالی است</string>
    <string name="err__empty__name">فیلد نام خالی است</string>
    <string name="err__empty__description">فیلد توضیحات خالی است</string>
    <string name="err__empty__price">فیلد هزینه انجام خدمت خالی است</string>
    <string name="err__empty__family">فیلد نام‌خانوادگی خالی است</string>
    <string name="err__empty__comment">فیلد نظر خالی است</string>
    <string name="err__invalid__verfcode">کد فعالسازی نادرست</string>
    <string name="err__load_image_failed">خطا در بارگزاری تصویر</string>


    <string name="label_pick_photo">انتخاب تصویر</string>
    <string name="label_profile">پروفایل</string>
    <string name="label_barbershop">آرایشگاه</string>
    <string name="label_advertise">تبلیغات</string>
    <string name="label_credit">پرداخت‌ها</string>
    <string name="label_faq">سوالات متداول</string>
    <string name="label_favorites">علاقه مندی ها</string>
    <string name="label_tell_friends">معرفی به دوستان</string>
    <string name="label_logout">خروج از حساب کاربری</string>
    <string name="label_description">تصویر</string>
    <string name="label_setting">تنظیمات</string>
    <string name="label_all_reserves">کل رزروهای امرزو</string>
    <string name="label_morning_reserves">تعداد رزرو صبح</string>
    <string name="label_evening_reserves">تعداد رزرو عصر</string>
    <string name="label_aboutus">درباره ما</string>
    <string name="navigation_menu_open">باز کردن</string>
    <string name="navigation_menu_close">بستن</string>
    <string name="action_bookmark">نشان کردن</string>
    <string name="action_remove_bookmark">حذف نشان</string>
    <string name="action_share">به اشتراک‌ گزاری</string>
    <string name="action_route">مسیریابی</string>
    <string name="action_reserve">رزرو</string>
    <string name="action_filter">فیلتر</string>
    <string name="action_next">بعدی</string>
    <string name="action_save">ذخیره</string>
    <string name="action_choose_photos">انتخاب تصاویر</string>
    <string name="action_single_category">انتخاب دسته‌بندی</string>
    <string name="action_choose_barbers">انتخاب آرایشگران</string>
    <string name="action_all_categories">نمایش همه خدمات</string>
    <string name="action_comment">نظردهی</string>
    <string name="action_filter_all">نمایش همه</string>
    <string name="action_filter_service">بر اساس خدمت</string>
    <string name="action_filter_category">بر اساس دسته‌بندی</string>
    <string name="empty_string"></string>
    <string name="downloading">در حال دانلود</string>
    <string name="uploading">در حال آپلود</string>
    <string name="updating">در حال بروزرسانی</string>
    <string name="creating">در حال ایجاد</string>
    <string name="deleting">در حال حذف</string>
    <string name="retrieving">در حال دریافت داده‌ها</string>
    <string name="action_component_factory">ghaichi</string>


    <string name="_hint_name">نام</string>
    <string name="_hint_desc">توضیحات</string>
    <string name="_hint_empty_content">هنوز هیچ آیتمی به این لیست اضافه نشده است.</string>
    <string name="_hint_family">نام خانوادکی</string>
    <string name="_hint_phone">شماره موبایل</string>
    <string name="_hint_message">پیام خود را بنویسید</string>
    <string name="_hint_message_to_barbershop">پیام برای آرایشگاه...</string>
    <string name="_hint_gender">جنیست</string>
    <string name="_hint_date">تاریخ رزور</string>
    <string name="_txt_gender_male">آقا</string>
    <string name="_txt_gender_female">خانم</string>
    <string name="_txt_service_name">نام سرویس</string>
    <string name="_txt_service_price">قیمت سرویس</string>
    <string name="user_phone_number">شماره تلفن</string>
    <string name="lbl_more">بیشتر</string>


    <string name="err_unable_to_connect_to_server">خطا در ارتباط با سرور، بعدا مجددا تلاش کنید.</string>

    <!-- content descriptions-->
    <string name="cd_ic_location">آیکون مکان نما</string>
</resources>
