<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/action_filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_single_category"
                android:orderInCategory="100"
                android:icon="@null"
                android:title="@string/action_single_category" />
            <item
                android:id="@+id/action_all_categories"
                android:orderInCategory="101"
                android:icon="@null"
                android:title="@string/action_all_categories" />
        </menu>
    </item>


</menu>