<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark"
        android:orderInCategory="102"
        android:icon="@drawable/ic_bookmark_border_white_24dp"
        android:title="@string/action_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_reserve"
        android:orderInCategory="103"
        android:icon="@drawable/ic_alarm_add_white_24dp"
        android:title="@string/action_reserve"
        app:showAsAction="always" />
</menu>