<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_hairdresser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recReservations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="@color/colorPrimaryDarkRipple"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_labels_position="right"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_style="@style/MenuLabelsStyle"
        fab:menu_shadowColor="#444">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddServiceCategory"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dashboard_black_24dp"
            android:tint="#fff"
            fab:fab_label="@string/_lbl_service_category" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddService"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_service_add_black_24dp"
            android:tint="#fff"
            fab:fab_label="@string/_lbl_manage_service" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddSampleWork"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cut_24dp"
            android:tint="#fff"
            fab:fab_label="@string/_lbl_manage_sample_work" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabRequestAdvertise"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_advertise_24"
            android:tint="#fff"
            fab:fab_label="@string/_lbl_request_advertise" />
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>
