<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogBackground"
    android:gravity="center_horizontal|center_vertical"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/_320dp"
        android:layout_height="@dimen/_400dp"
        android:background="@color/colorWhite">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/_lbl_add_service" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingEnd="@dimen/_16dp"
            android:paddingStart="@dimen/_16dp">

            <Spinner
                android:id="@+id/spnCategories"
                style="@style/SpinnerStyle"
                android:layout_marginBottom="@dimen/_8dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_lbl_service">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_lbl_price">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:lines="1"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_lbl_duration">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:lines="1"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/AppTheme.DialogButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:text="@string/_lbl_cancel" />

            <ImageView
                android:layout_width="@dimen/_1dp"
                android:layout_height="@dimen/_36dp"
                android:src="@color/colorWhite" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnOk"
                style="@style/AppTheme.DialogButton.Bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:text="@string/_lbl_confirm" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>