<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogBackground"
    android:gravity="center_horizontal|center_vertical"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/_240dp"
        android:layout_height="@dimen/_320dp"
        android:background="@drawable/dialog_bg">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/_lbl_add_credit" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtOnlinePayment"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_42dp"
            android:text="@string/_lbl_price" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutCashValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtOnlinePayment"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_16dp"
            android:hint="@string/_lbl_add_credit">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtCashValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:text="@string/_lbl_cancel" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPay"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:text="@string/_lbl_pay" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>