<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogBackground"
    android:gravity="center_horizontal|center_vertical"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/_320dp"
        android:layout_height="@dimen/_240dp"
        android:background="@drawable/dialog_bg">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgIcon"
            android:tint="@color/colorPrimary"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_12dp"
            app:srcCompat="@mipmap/ic_gender_types" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_72dp"
            android:text="@string/_lbl_select_gender" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_margin="@dimen/_16dp"
            android:hint="@string/_lbl_add_credit">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@drawable/dialog_button_background"
            android:gravity="center_vertical"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/AppTheme.DialogButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:text="@string/_lbl_cancel" />

            <ImageView
                android:layout_width="@dimen/_1dp"
                android:layout_height="@dimen/_48dp"
                android:src="@color/colorWhite" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnOk"
                style="@style/AppTheme.DialogButton.Bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:text="@string/_lbl_confirm" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>